Remove admin token from user deletion
